# security_tool

./: .env  .env.example  .gitignore  README.md  alembic.ini  build_pshield.py  check_db_connection.py  check_db_tables.py  generate_psybershield_manual_pdf.py  generate_user_guide_pdf.py  policy.example.json  pshield.spec  pyproject.toml  requirements.txt  requirements.txt.example  roadmap_to_pdf.py
app/: __init__.py  approvals.py  artifacts.py  audit.py  baseline.py  bundles.py  comparison.py  config.py  context.py  demo_site.py  dependencies.py  diagnostics.py  doctor.py  drift.py  engine.py  environment.py  incident.py  integrity.py  main.py  models.py  notifications.py  output_paths.py  policy.py  profiles.py  redaction.py  scanner.py  secrets.py  timeline.py  vuln.py  watch.py
docs/: architecture.md  changelog.md  turan-user-guide.md  working-agreement.md
migrations/: env.py
outputs/: crawl-20260527-001045.html  crawl-20260601-224525.html  psybershield-web.db  scan-20260601-223927.html  scan-20260601-224304.html  scan-20260601-224314.html
reports/: audit.json  demo-scan.json  demo-scan.md  scan.html  scan.json  scan.md  vps69.html  vps69.json  vps69.md
tests/: conftest.py  test_advisories.py  test_audit.py  test_audit_view.py  test_baseline.py  test_bundle.py  test_cli_help.py  test_compare.py  test_compare_reports.py  test_config.py  test_containment.py  test_context.py  test_cookies_check.py  test_crawl.py  test_demo_site.py  test_dependencies.py  test_doctor.py  test_drift.py  test_environment.py  test_executor_apply.py  test_executor_gate.py  test_osv.py  (+32 more)
(+112 files in other folders)
