[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "psybershield"
version = "0.1.0"
description = "Security visibility and response for small servers and web applications"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx",
  "beautifulsoup4",
  "rich",
  "typer",
  "pydantic",
  "jinja2",
]

[project.optional-dependencies]
browser = ["playwright"]

[project.scripts]
pshield = "app.main:app"
PsyberShield = "app.main:app"

[tool.setuptools]

[tool.setuptools.packages.find]
include = ["app*"]

